--- a/Construction_Ke/web.config
+++ b/Construction_Ke/web.config
@@ -1,1 +1,5 @@
-
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<connectionStrings>
+	<add name="ConnectionString" connectionString="server=localhost;uid=root;pwd=;database=roben_test;trusted_connection=no;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"/>
+	<!--<add name="ConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0; Data Source=|DataDirectory|d_b.mdb" providerName="System.Data.OleDb"/>-->
+</connectionStrings>
